--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 
   ga('create', 'UA-34452540-5', 'none');
     ga('send', 'pageview');
-
+    // obviously not always 1 usually
+    ga('set', 'dimension1', Math.floor((Math.random() * 2) + 1).toString());
 </script>
 </head>
 <body>
