Fix stupid mistake : set before send

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-34452540-5', 'none');
-    ga('send', 'pageview');
+  ga('set', 'dimension1', 'IEE');
+  ga('send', 'pageview');
     // obviously not always 1 usually
-    ga('set', 'dimension1', Math.floor((Math.random() * 2) + 1).toString());
+    //ga('set', 'dimension1', Math.floor((Math.random() * 2) + 1).toString());
 </script>
 </head>
 <body>
