--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,10 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-   (i[r].q=i[r].q||[]).push(arguments)
-   },i[r].l=1*new Date();a=s.createElement(o),
-     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-34452540-5', 'none');
-  ga('set', 'dimension1', 'IEE');
-  ga('send', 'pageview');
-    // obviously not always 1 usually
-    //ga('set', 'dimension1', Math.floor((Math.random() * 2) + 1).toString());
+  loadAnalyticDriver('ga');
+  analyticCreate('UA-34452540-5','none');
+  analyticSet('dimension1', 'FU');
+  analyticSendPageview();
 </script>
 </head>
 <body>
