--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,10 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 <script>
-  loadAnalyticDriver('ga');
-  analyticCreate('UA-34452540-5','none');
-  analyticSet('dimension1', 'FU');
-  analyticSendPageview();
+  <%#loadAnalyticDriver('ga');%>
+  <%#analyticCreate('UA-34452540-5','none');%>
+  <%#analyticSet('dimension1', 'FU');%>
+  <%#analyticSendPageview();%>
 </script>
 </head>
 <body>
